add other function merging versions; conservative/greedy function merging.

--- a/llvm/lib/Transforms/IPO/CMakeLists.txt
+++ b/llvm/lib/Transforms/IPO/CMakeLists.txt
@@ -16,6 +16,9 @@ add_llvm_component_library(LLVMipo
   FunctionAttrs.cpp
   FunctionImport.cpp
   FunctionMerging.cpp
+  MergeSimilarFunctions.cpp
+  FMSA.cpp
+  FastFM.cpp
   GlobalDCE.cpp
   GlobalOpt.cpp
   GlobalSplit.cpp
